// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectDetails /> Should adopt the "project" property 1`] = `
<Wrapper__Wrapper
  animate={true}
>
  <ContentWrapper__ContentWrapper>
    <BackLink
      position="top"
    />
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      padding="1.5rem 1rem"
      showArrowBreakpoint="750px"
    >
      <h1>
        Title for test case
      </h1>
      <Description__Description>
        Description for test case
      </Description__Description>
      <Image
        images={
          Array [
            Object {
              "file": Object {
                "fileName": "test-s.png",
                "url": "/test-s.png",
              },
              "title": "Test image",
            },
            Object {
              "file": Object {
                "fileName": "test-m.png",
                "url": "/test-m.png",
              },
              "title": "Test image",
            },
            Object {
              "file": Object {
                "fileName": "test-l.png",
                "url": "/test-l.png",
              },
              "title": "Test image",
            },
            Object {
              "file": Object {
                "fileName": "test-xl.png",
                "url": "/test-xl.png",
              },
              "title": "Test image",
            },
          ]
        }
      />
      <Article__Article>
        <h1
          id="article-for-test-case"
          key="0"
        >
          Article for test case
        </h1>
        
        
        <p
          key="2"
        >
          <a
            href="https://the.world/"
            rel="noopener noreferrer"
            target="_blank"
          >
            add attributes to link
          </a>
        </p>
        
        
      </Article__Article>
    </SpeechBubble>
    <BackLink
      position="bottom"
    />
  </ContentWrapper__ContentWrapper>
</Wrapper__Wrapper>
`;

exports[`<ProjectDetails /> Should handle case where "images" is not an Array 1`] = `
<Wrapper__Wrapper
  animate={true}
>
  <ContentWrapper__ContentWrapper>
    <BackLink
      position="top"
    />
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      padding="1.5rem 1rem"
      showArrowBreakpoint="750px"
    >
      <h1>
        Title for test case
      </h1>
      <Description__Description>
        Description for test case
      </Description__Description>
      <Article__Article>
        <h1
          id="article-for-test-case"
          key="0"
        >
          Article for test case
        </h1>
        
        
        <p
          key="2"
        >
          <a
            href="https://the.world/"
            rel="noopener noreferrer"
            target="_blank"
          >
            add attributes to link
          </a>
        </p>
        
        
      </Article__Article>
    </SpeechBubble>
    <BackLink
      position="bottom"
    />
  </ContentWrapper__ContentWrapper>
</Wrapper__Wrapper>
`;

exports[`<ProjectDetails /> Should render without any given properties 1`] = `
<Wrapper__Wrapper
  animate={true}
>
  <ContentWrapper__ContentWrapper>
    <BackLink
      position="top"
    />
    <SpeechBubble
      arrowHeight="9vh"
      arrowPosition="bottom-right"
      backgroundColor="#aedd2c"
      color="#000"
      isGhost={false}
      makeAppear={false}
      padding="1.5rem 1rem"
      showArrowBreakpoint="750px"
    >
      <h1 />
      <Description__Description />
      <Article__Article />
    </SpeechBubble>
    <BackLink
      position="bottom"
    />
  </ContentWrapper__ContentWrapper>
</Wrapper__Wrapper>
`;
